--- a/index.Rmd
+++ b/index.Rmd
@@ -27,5 +27,10 @@ output:
 
 ***
 
-(more chapters to be added similarly as we proceed with the course!)
+```{r child = "chapter3.Rmd"}
+# This will include Chapter 3 (that is updated in its own file) in the document.
+```
+  
+***
+
 
