--- a/index.Rmd
+++ b/index.Rmd
@@ -33,4 +33,7 @@ output:
   
 ***
 
+```{r child = "chapter4.Rmd"}
+# This will include Chapter 4 (that is updated in its own file) in the document.
+```
 
