--- a/index.Rmd
+++ b/index.Rmd
@@ -37,3 +37,9 @@ output:
 # This will include Chapter 4 (that is updated in its own file) in the document.
 ```
 
+***
+
+```{r child = "chapter5.Rmd"}
+# This will include Chapter 4 (that is updated in its own file) in the document.
+```
+
