--- a/index.Rmd
+++ b/index.Rmd
@@ -15,31 +15,36 @@ output:
 
 # Introduction to Open Data Science - Course Project
 
-```{r child = "chapter1.Rmd"}
+```{r child = "chapter1.Rmd", cache=TRUE}
 # This will include Chapter 1 (that is updated in its own file) in the document.
 ```
   
 ***
   
-```{r child = "chapter2.Rmd"}
+```{r child = "chapter2.Rmd", cache=TRUE}
 # This will include Chapter 2 (that is updated in its own file) in the document.
 ```
 
 ***
 
-```{r child = "chapter3.Rmd"}
+```{r child = "chapter3.Rmd", cache=TRUE}
 # This will include Chapter 3 (that is updated in its own file) in the document.
 ```
   
 ***
 
-```{r child = "chapter4.Rmd"}
+```{r child = "chapter4.Rmd", cache=TRUE}
 # This will include Chapter 4 (that is updated in its own file) in the document.
 ```
 
 ***
 
-```{r child = "chapter5.Rmd"}
-# This will include Chapter 4 (that is updated in its own file) in the document.
+```{r child = "chapter5.Rmd", cache=TRUE}
+# This will include Chapter 5 (that is updated in its own file) in the document.
 ```
 
+***
+
+```{r child = "chapter6.Rmd", cache=TRUE}
+# This will include Chapter 6 (that is updated in its own file) in the document.
+```
